[package]
name = "ghostterm"
version = "0.1.0"
edition = "2021"

[dependencies]
# The latest Iroh stack (0.33)
iroh = { version = "0.33", features = ["discovery-local-network"] }
iroh-gossip = "0.33" 

# Async & Runtime
tokio = { version = "1", features = ["full"] }
futures-lite = "2.3" # Required for the message loop

# CLI & Serialization
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
rand = "0.8"
hex = "0.4.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
bincode = "1.3.3"
chrono = "0.4.43"

[build-dependencies]
winres = "0.1.12"
